--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URI=postgresql://postgres:12345@localhost:5432/attesttailordatabase
+DATABASE_URI=postgresql://postgres:postgres@localhost:5432/attesttailordatabase
 JWT_SECRET_KEY=hflasbfsdnvlkndlnl12324l4jbdvjbskjdv54543
 JWT_ACCESS_TOKEN_EXPIRES=3600
 
